--- a/style.css
+++ b/style.css
@@ -113,6 +113,21 @@ body
         overflow: hidden;
     }
 
+    .overlay-text 
+    {
+        position: absolute;
+        top: 44%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-size: 50px;
+        font-weight: bold;
+        text-align: center;
+        z-index: 2;
+        width: 400px; 
+        word-wrap: break-word;
+    }    
+
     .img-content
     {
         width: 1300;
