--- a/style.css
+++ b/style.css
@@ -113,6 +113,22 @@ body
         overflow: hidden;
     }
 
+    @keyframes burstEffect 
+    {
+        0% 
+        {
+            opacity: 0;
+            transform: scale(0.5);
+        } 50% 
+        {
+            opacity: 1;
+            transform: scale(1.3);
+        } 100% 
+        {
+            transform: scale(1);
+        }
+    }
+    
     .overlay-text 
     {
         position: absolute;
@@ -124,10 +140,12 @@ body
         font-weight: bold;
         text-align: center;
         z-index: 2;
-        width: 400px; 
+        width: 400px;
         word-wrap: break-word;
-    }    
-
+        opacity: 0;
+        animation: burstEffect 1s ease-out forwards;
+    }
+    
     .img-content
     {
         width: 1300;
