--- a/categories.css
+++ b/categories.css
@@ -321,6 +321,7 @@ body {
   width: 100%;
   padding: 40px 20px;
   display: flex;
+  flex-direction: column;
   align-items: center; /* Posisi tengah horizontal */
   margin: 0 auto;
 }
@@ -341,6 +342,7 @@ body {
   padding: 30px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
