--- a/about.css
+++ b/about.css
@@ -189,9 +189,7 @@ html, body {
     justify-content: center;
     align-items: center;
     font-size: 14px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    margin-top: auto;
     width: 100%;
     box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.3);
 }
