--- a/categories.css
+++ b/categories.css
@@ -234,7 +234,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    max-width: 1000px;
+    width: 100px;
     margin: auto;
     padding: 40px 20px;
   }
