--- a/categories.css
+++ b/categories.css
@@ -234,7 +234,8 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    width: 100px;
+    width: 100%;
+    max-width: 1200px;
     margin: auto;
     padding: 40px 20px;
   }
@@ -243,6 +244,7 @@ body {
     background-color: #0d0d0d;
     border: 1px solid #444;
     padding: 20px;
+    width: 100%;
     border-radius: 12px;
     color: white;
     text-align: center;
