--- a/categories.css
+++ b/categories.css
@@ -195,6 +195,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+    width: 95%;
     max-width: 1000px;
     margin: auto;
     padding: 40px 20px;
